2018-01-20  Albrecht Dreß  <albrecht.dress@arcor.de>

	Do not trigger a CRITICAL message when request for a Message
	Disposition Notification is activated
	Fixes
	https://mail.gnome.org/archives/balsa-list/2019-January/msg00018.html

	* libbalsa/message.c (libbalsa_message_set_dispnotify): test
	whether message->headers->dispnotify_to is NULL before unreffing
	it.

2018-01-13  Albrecht Dreß  <albrecht.dress@arcor.de>

	Get the Autocrypt headers from Balsa's user-headers instead of
	from a GMimeMessage, which doesn't always exist.

	* libbalsa/autocrypt.c (scan_autocrypt_headers): new function
	for scanning Balsa's user-headers;
	(autocrypt_from_message): use it, instead of
	g_mime_object_get_header_list() and friends;
	(parse_autocrypt_header): extend the (debug) output when
	checking the key data from an Autocrypt header fails.

2019-01-11  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Check for NULL message

	* libbalsa/imap/imap-commands.c (imap_mbox_sort_msgno_client):
	check for NULL message and for a message with a NULL envelope,
	to avoid dereferencing NULL pointers.

2018-01-10  Albrecht Dreß  <albrecht.dress@arcor.de>

	Minor autocrypt fixes

	* libbalsa/autocrypt.c: set a proper error message if no
	  fingerprint of a usable private key can be identified for a
	  mailbox; fix memory leak; attach Autocrypt database window to
	  geometry manager
	* libbalsa/send.c: do not add Autocrypt header when postponing;
	  propagate error from creating Autocrypt header
	* src/save-restore.c: restore Autocrypt database window geometry

2018-01-05  Albrecht Dreß  <albrecht.dress@arcor.de>

	make IMAP messages translatable

	* libbalsa/imap/auth-cram.c, libbalsa/imap/auth-gssapi.c,
	libbalsa/imap/imap-commands.c, libbalsa/imap/imap-handle.c:
	  make message strings translatable
	* libbalsa/imap/imap-handle.c, libbalsa/imap/imap_private.h:
	  implement imap_mbox_handle_set_msg() as function
	* libbalsa/imap/imap-commands.h, libbalsa/imap/imap-tls.c: